fixed overflow
fixed overflow on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,7 @@ $breakpoint-mobile: 420px;
     position: relative;
     width: 416px;
     height: 3144px;
-
+    overflow-x: hidden;
     /* Hvit */
 
     background: #FFFFFF;
