--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -216,6 +216,7 @@ $breakpoint-mobile: 799px;
         order: 0;
         align-self: flex-start;
         margin: 12.5px 24px;
+        cursor: pointer;
     }
     .produkterFooter {
         position: static;
@@ -237,6 +238,7 @@ $breakpoint-mobile: 799px;
         order: 1;
         align-self: flex-start;
         margin: 12.5px 24px;
+        cursor: pointer;
     }
     .kontaktFooter {
         position: static;
@@ -258,6 +260,7 @@ $breakpoint-mobile: 799px;
         order: 2;
         align-self: flex-start;
         margin: 12.5px 24px;
+        cursor: pointer;
     }
     .abonnementFooter {
         position: static;
@@ -279,6 +282,7 @@ $breakpoint-mobile: 799px;
         order: 3;
         align-self: flex-start;
         margin: 12.5px 24px;
+        cursor: pointer;
     }
     .logInnFooter {
         position: static;
@@ -300,6 +304,7 @@ $breakpoint-mobile: 799px;
         order: 4;
         align-self: flex-start;
         margin: 12.5px 24px;
+        cursor: pointer;
     }
     .frame31FooterB {
         display: flex;
@@ -337,6 +342,7 @@ $breakpoint-mobile: 799px;
         order: 0;
         align-self: flex-start;
         margin: 15px 24px;
+        cursor: pointer;
     }
     .cookiesFooter {
         position: static;
@@ -358,6 +364,7 @@ $breakpoint-mobile: 799px;
         order: 1;
         align-self: flex-start;
         margin: 15px 24px;
+        cursor: pointer;
     }
     .languageFooter {
         position: static;
@@ -379,6 +386,7 @@ $breakpoint-mobile: 799px;
         order: 2;
         align-self: flex-start;
         margin: 15px 24px;
+        cursor: pointer;
     }
     .frame27Footer {
         display: flex;
