--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -160,7 +160,7 @@ $breakpoint-mobile: 799px;
 
     .headerMobile {
         position: absolute;
-        width: 450px;
+        width: 416px;
         height: 72px;
         left: 0px;
         top: 20px;
