--- a/src/components/homepage/homepage.styles.scss
+++ b/src/components/homepage/homepage.styles.scss
@@ -197,7 +197,7 @@ $breakpoint-mobile: 799px;
       height: 88px;
       left: 0px;
       top: 0px;
-      border-radius: 800px;
+      // border-radius: 800px;
       /* Inside Auto Layout */
       flex: none;
       order: 0;
@@ -828,7 +828,7 @@ $breakpoint-mobile: 799px;
       // padding-left: 12px;
       // padding-right: 12px;
       /* Main light */
-      background: #E7BFFF;
+      background: white;
       /* Main */
       border: 6px double #8500D7;
       box-sizing: border-box;
